--- a/src/App.css
+++ b/src/App.css
@@ -201,6 +201,8 @@ body{
   height: 10px;
   width: 10px;
   border-radius: 100%;
+  transition-property: border;
+  transition-duration: 500ms;
 }
 .stage-stance-flow{
   display: flex;
