--- a/src/App.css
+++ b/src/App.css
@@ -469,8 +469,8 @@ body{
   text-align: right;
 }
 #footer-linkedin{
-  top: calc(0.5*var(--footerHeight))
+  top: 2vh;
 }
 #footer-github{
-  top: calc(0.5*var(--footerHeight))
+  top: 2vh;
 }
