--- a/src/App.css
+++ b/src/App.css
@@ -76,10 +76,10 @@ a{
       top: 9px !important;
     }
     #footer-linkedin{
-      top: 1.3vh;
+      top: 1.3vh !important;
     }
     #footer-github{
-      top: 1.3vh;
+      top: 1.3vh !important;
     }
 }
 
