--- a/src/App.css
+++ b/src/App.css
@@ -482,3 +482,22 @@ body{
 #footer-github{
   top: 1.3vh;
 }
+#start-form{
+  border: none;
+  font: inherit;
+  font-weight: bold;
+  border-radius: 25px;
+  background-color: purple;
+  font-size: 16px;
+  padding: 12px;
+  position: relative;
+  top: 5vh;
+  color: white;
+  width: 140px;
+  margin-top: 12px;
+}
+#start-form:hover{
+  cursor: pointer;
+  background-color: white;
+  color: purple;
+}
