--- a/src/App.css
+++ b/src/App.css
@@ -324,6 +324,9 @@ body{
 #new-form{
   color: white;
 }
+#new-form:hover{
+  cursor: pointer;
+}
 #data-list-container{
   display: none;
   flex-direction: column;
